--- a/instagram-clone2/app/src/main/res/values/strings.xml
+++ b/instagram-clone2/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">instagram-clone</string>
+    <string name="app_name">Instagram Clone</string>
 </resources>
