Retirive image from firebase using glide

--- a/instagram-clone2/app/src/main/res/values/strings.xml
+++ b/instagram-clone2/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Instagram Clone</string>
+    <string name="title_activity_user_feed">UserFeed</string>
 </resources>
